# snake-game

./: CMakeLists.txt  README.md
src/: apple.c  apple.h  game.c  game.h  input.c  input.h  main.c  snake.c  snake.h  text.c  text.h
